--- a/browserAction/index.html
+++ b/browserAction/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
