Trigger bell from browserAction

--- a/browserAction/index.html
+++ b/browserAction/index.html
@@ -5,7 +5,8 @@
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <h1 id="myHeading">My content</h1>
+    <h1 id="myHeading">Szklanki</h1>
+    <button id="buttonNow">Wybij szklanki</button>
     <script src="script.js"></script>
   </body>
 </html>
