Playing correct count of bell strikes

--- a/background-page.html
+++ b/background-page.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <audio src="sounds/single.mp3" id="audioSingle"></audio>
+    <audio src="sounds/double.mp3" id="audioDouble"></audio>
   </body>
 </html>
