Muting bell strikes until a selected event

--- a/browserAction/index.html
+++ b/browserAction/index.html
@@ -7,6 +7,14 @@
   <body>
     <h1>Szklanki</h1>
     <button id="buttonNow">Wybij szklanki</button>
+    <fieldset id="muteUntil" class="button-wrapper" style="margin-top: 8px">
+      <legend>Wstrzymaj szklanki</legend>
+      <button id="buttonMuteNext">Następną serię</button>
+      <button id="buttonMuteWatch">Do końca wachty</button>
+      <button id="buttonMuteRestart">Do zamknięcia przeglądarki</button>
+      <button id="buttonMutePermanent">Aż włączę ponownie</button>
+    </fieldset>
+    <button id="buttonUnmute">Wznów szklanki</button>
     <fieldset class="radiobutton-wrapper" id="notificationMethod" style="margin-top: 8px">
       <legend>Wybierz metodę powiadamiania</legend>
       <div class="group-radio-buttons">
