Indicate muted statte with icon

--- a/browserAction/index.html
+++ b/browserAction/index.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <h1>Szklanki</h1>
-    <button id="buttonNow">Wybij szklanki</button>
-    <fieldset id="muteUntil" class="button-wrapper" style="margin-top: 8px">
+    <button id="buttonNow">Wybij szklanki teraz</button>
+    <fieldset id="muteUntil" class="button-wrapper" style="margin-top: 16px">
       <legend>Wstrzymaj szklanki</legend>
       <button id="buttonMuteNext">Następną serię</button>
       <button id="buttonMuteWatch">Do końca wachty</button>
