Style browserAction buttons and fieldsets

--- a/browserAction/index.html
+++ b/browserAction/index.html
@@ -15,7 +15,7 @@
         Until manually enabled
       </button>
     </fieldset>
-    <button id="buttonUnmute" data-i18n-msg="buttonUnmute" style="margin-top: 4px">Unmute</button>
+    <button id="buttonUnmute" data-i18n-msg="buttonUnmute" style="margin-top: 4px; width: 100%">Unmute</button>
     <fieldset class="radiobutton-wrapper" id="notificationMethod" style="margin-top: 8px">
       <legend data-i18n-msg="notificationLegend">Choose method of notifying</legend>
       <label class="radio__label">
@@ -24,14 +24,14 @@
       </label>
       <label class="radio__label">
         <input type="radio" name="methodChoice" value="sound" class="radio" />
-        <span class="radio__label__text" data-i18n-msg="notificationBoth">Sound and notification</span>
+        <span class="radio__label__text" data-i18n-msg="notificationSound">Sound only</span>
       </label>
       <label class="radio__label">
         <input type="radio" name="methodChoice" value="notification" class="radio" />
-        <span class="radio__label__text" data-i18n-msg="notificationSound">Sound only</span>
+        <span class="radio__label__text" data-i18n-msg="notificationPopup">Notification only</span>
       </label>
     </fieldset>
-    <button id="buttonNow" data-i18n-msg="buttonNow" class="button--primary" style="margin-top: 16px">
+    <button id="buttonNow" data-i18n-msg="buttonNow" class="button--primary" style="margin-top: 16px; width: 100%">
       Strike hour now
     </button>
     <script src="script.js"></script>
