Restructure application folders

--- a/background/index.html
+++ b/background/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <script type="module" src="script.js"></script>
+    <script src="boarding.js"></script>
   </head>
   <body>
     <audio id="audioSingle">
