--- a/browserAction/index.html
+++ b/browserAction/index.html
@@ -35,6 +35,6 @@
       Strike hour now
     </button>
     <script src="script.js"></script>
-    <script src="localize.js"></script>
+    <script src="../localize.js"></script>
   </body>
 </html>
